first usable version of mmixide
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@387 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/TODO.TXT
+++ b/vmb/src/mmixide/TODO.TXT
@@ -3,14 +3,26 @@ Stepping, Continue
 
 Editing Registers
 
-Buttons
+Buttons with tool tips
 
 Options
    Editor
    Debugger
+   Registers
    
 VMB Debug
+    Memory view unrestricted
 
 Correct zoom of markers and line numbers
 
 Profiling support
+
+Multiple source files
+
+Bug in resume
+@<Load |g[k]| from the register stack@>=
+  will load rG even if less than 32. if zero is loaded we have
+  a loop inside the UNSAVE instruction because rB==0
+  it should set the B_BIT see 336 and 337 of mmix-pipe
+
+Remove cur_loc marker when editing
