Printing added, working but not complete (misses paging)
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@389 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/TODO.TXT
+++ b/vmb/src/mmixide/TODO.TXT
@@ -5,18 +5,15 @@ Running MMIX in subwindow.
 Using buttons for stepping and continue.
 
 Buttons with tool tips
-
-View
-  Syntax highlight on/off
   
 Options
    Editor
    Debugger
    Break on Main 
 
-Load sysmbol table
+Load symbol table
 Set breakpoints in symbol table
-brea   
+  
    
 VMB Debug
     Memory view unrestricted
