added editing syntax higlhlighting colors
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@403 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/TODO.TXT
+++ b/vmb/src/mmixide/TODO.TXT
@@ -17,8 +17,7 @@ Ask for reset/reload after assembly while debugging
 
 store options in registry to make them persistent
 
-integrate the generation of image files
-	or other postprocessing
+integrate the generation of image files or other postprocessing
 
 Add help for the ide
 
