last version on XP laptop
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@411 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/TODO.TXT
+++ b/vmb/src/mmixide/TODO.TXT
@@ -13,6 +13,8 @@ Manage read and write breakpoints
    
 Memory view unrestricted
 
+Statistics line im Trace window
+
 Ask for reset/reload after assembly while debugging
 
 store options in registry to make them persistent
