cleaned up saving and file name handling
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@418 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/TODO.TXT
+++ b/vmb/src/mmixide/TODO.TXT
@@ -1,9 +1,8 @@
-
-double click in the X in the splitter bar should close the current document not the edit window.
+5:20 PM 2/3/2014
 
 Step over and step out
 
-Exit with unnamed  window should ask for "save as"
+Exit and selecting cancel in save as should cancel the exit.
 
 Breakpoints window
 Set breakpoints in symbol table
