adding command execution and source tabs, problem with missing markers
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@429 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/TODO.TXT
+++ b/vmb/src/mmixide/TODO.TXT
@@ -1,14 +1,14 @@
-5:20 PM 2/3/2014
+Marker in multiple files
+cmds do not work as expected
 
-
-Exit and selecting cancel in save as should cancel the exit.
 
 Breakpoints window
 Set breakpoints in symbol table
 Be able to manage breakpoints even without source code.
-Manage read and write breakpoints  
 
 Statistics line im Trace window
+
+give the register windows a minimum width
 
 Ask for reset/reload after assembly while debugging
 
