adding exception tracing, fixing bug loading and storing strings in the registry moving to version 1.6
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@483 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/TODO.TXT
+++ b/vmb/src/mmixide/TODO.TXT
@@ -1,4 +1,5 @@
-
+When recompiling a file old file and linnumber information may remain in memory
+because this information is overwritten but not deleted.
 
 
 Breakpoints window
