Adding context menus to memory and register windows
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@611 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/TODO.TXT
+++ b/src/mmixide/TODO.TXT
@@ -21,6 +21,15 @@ Other Ideas:
 
 Add a reset button (doubling that of the motherboard).
 
-make mmixvd (visual debugger for mmix)
+man hätte gerne einen pretty print meachnismus
+fürs ganze file oder für die selection (wenn eine existiert)
+abhängig von den source options
+Tabulator größe
+max label tabs
+max operand tabs
+überflüssige spaces löschen
+spaces ersetzen durch tabs
+line comment character 
+nur wenn erforderlich
 
-get a decent icon for the mmixide
+
