adding a pretty printer
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@616 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/TODO.TXT
+++ b/src/mmixide/TODO.TXT
@@ -1,8 +1,5 @@
-When recompiling a file old file and linnumber information may remain in memory
+When recompiling a file old file and linenumber information may remain in memory
 because this information is overwritten but not deleted.
-
-Set breakpoints in symbol table
-Show memory related to symbols
 
 Statistics line im Trace window
 
