fixing typo in TODO
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@645 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/TODO.TXT
+++ b/src/mmixide/TODO.TXT
@@ -1,7 +1,7 @@
-When recompiling a file old file and linenumber information may remain in memory
+When recompiling a file, old file and linenumber information may remain in memory
 because this information is overwritten but not deleted.
 
-Statistics line im Trace window
+Statistics line in Trace window
 
 Ask for reset/reload after assembly while debugging
 
